--- a/SOFT/AtmbDevices/DeviceLibrary/DeviceLibrary.csproj
+++ b/SOFT/AtmbDevices/DeviceLibrary/DeviceLibrary.csproj
@@ -65,6 +65,10 @@
     <Compile Include="CcashReader.cs" />
     <Compile Include="CCoindID.cs" />
     <Compile Include="Ccounters.cs" />
+    <Compile Include="CHopper.CEmptyCount.cs" />
+    <Compile Include="CHopper.Error.cs" />
+    <Compile Include="CHopper.Level.cs" />
+    <Compile Include="CHopper.Registre.cs" />
     <Compile Include="CInserted.cs" />
     <Compile Include="CLevel.cs" />
     <Compile Include="CMemoryStorage.cs" />
@@ -78,7 +82,7 @@
     <Compile Include="CCtalk.cs" />
     <Compile Include="CVErrorCodes.cs" />
     <Compile Include="CDevice.cs" />
-    <Compile Include="CHopperStatus.cs" />
+    <Compile Include="CHopper.Status.cs" />
     <Compile Include="CVariableSet.cs" />
     <Compile Include="CHopper.cs" />
     <Compile Include="CHopper.Header.cs" />
@@ -86,7 +90,7 @@
     <Compile Include="CPelicano.cs" />
     <Compile Include="CPelicano.Header.cs" />
     <Compile Include="CDevicesManage.cs" />
-    <Compile Include="Etat.cs" />
+    <Compile Include="Hopper.Etat.cs" />
     <Compile Include="messagesText.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -101,13 +105,13 @@
     </Compile>
     <Compile Include="Resource1.Designer.cs" />
     <Compile Include="SelfTestResult.cs" />
-    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="EnteteDoc.txt" />
     <Content Include="logo.ico" />
     <Content Include="..\AtmbTestDevices\bin\Debug\parametres.xml">
       <Link>parametres.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Release.txt" />
     <None Include="app.config" />
