--- a/SOFT/AtmbDevices/DeviceLibrary/DeviceLibrary.csproj
+++ b/SOFT/AtmbDevices/DeviceLibrary/DeviceLibrary.csproj
@@ -40,11 +40,8 @@
     <ApplicationIcon>logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BnrCtlDotNet">
-      <HintPath>.\BnrCtlDotNet.dll</HintPath>
-    </Reference>
     <Reference Include="BnrCtlDotNet40">
-      <HintPath>.\BnrCtlDotNet40.dll</HintPath>
+      <HintPath>..\AtmbTestDevices\bin\Debug\BnrCtlDotNet40.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.5.8\lib\net45\NLog.dll</HintPath>
@@ -66,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CBnrMei.cs" />
     <Compile Include="CCanal.cs" />
     <Compile Include="CcashReader.Header.cs" />
     <Compile Include="CcashReader.cs" />
@@ -143,6 +141,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
