--- a/SOFT/AtmbDevices/DeviceLibrary/DeviceLibrary.csproj
+++ b/SOFT/AtmbDevices/DeviceLibrary/DeviceLibrary.csproj
@@ -126,6 +126,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <None Include="ClassDiagram2.cd" />
+    <None Include="ClassDiagram3.cd" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
