--- a/SOFT/AtmbDevices/DeviceLibrary/packages.config
+++ b/SOFT/AtmbDevices/DeviceLibrary/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.DependencyValidation.Analyzers" version="0.9.0" targetFramework="net472" />
   <package id="NLog" version="4.5.8" targetFramework="net472" />
   <package id="NLog.Config" version="4.5.8" targetFramework="net472" />
   <package id="NLog.InstallNLogConfig" version="2.0" targetFramework="net472" />
